Adding App Pages
Settings and Adding Courses are made and the layout of the other pages finished too.

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 							<span class="text-center">Forgot your password? <a id="forgot-pass" href="#">Click here</a></span>
 						</form>
 						<form id="signup-form" name="signup-form">
+							<input class="input-field" name="Remail" type="text" placeholder="Full Name" required/>
 							<input class="input-field" name="Remail" type="email" placeholder="Email Address" required/>
 							<input class="input-field" name="Rpassword" type="password" placeholder="Password" required/>
 							<input class="input-field" name="Rcpassword" type="password" placeholder="Confirm Password" required/>
