Fixing sidebar colors

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 							<span class="text-center">Forgot your password? <a id="forgot-pass" href="#">Click here</a></span>
 						</form>
 						<form id="signup-form" name="signup-form">
-							<input class="input-field" name="Remail" type="text" placeholder="Full Name" required/>
+							<input class="input-field" name="Rname" type="text" placeholder="Full Name" required/>
+							<input class="input-field" name="Rssn" type="text" placeholder="SSN" required/>
 							<input class="input-field" name="Remail" type="email" placeholder="Email Address" required/>
 							<input class="input-field" name="Rpassword" type="password" placeholder="Password" required/>
 							<input class="input-field" name="Rcpassword" type="password" placeholder="Confirm Password" required/>
