--- a/pages/settings.html
+++ b/pages/settings.html
@@ -15,7 +15,7 @@
 		<div class="row">
 			<a href="#"><img class="logo" src="../resources/img/logo.png" alt="Question Logo" /></a>
 			<ul class="main-nav">
-	
+
 				<li><a class="active" href="#"><i class="ion-android-options"></i> Settings</a></li>
 				<li><a class="" href="#"><i class="ion-power"></i> Sign Out</a></li>
 			</ul>
@@ -44,6 +44,10 @@
 					<input class="input-field" type="text" value="Muhammad Magdy Muhammad Al-Gazouly" disabled/>
 					<span class="form-label">Email Address</span>
 					<input class="input-field" type="email" value="m.algazouly96@aswu.edu.eg" disabled/>
+					<span class="form-label">SSN</span>
+					<input class="input-field" type="text" value="29608012800913" disabled/>
+					<span class="form-label">Level/Title</span>
+					<input class="input-field" type="text" value="Third Year" disabled/>
 					<span class="form-label">Password</span>
 					<input class="input-field" type="password" placeholder="Old Password" required/>
 					<input class="input-field" type="password" placeholder="New Password" required/>
