Adding New Pages

--- a/pages/settings.html
+++ b/pages/settings.html
@@ -31,10 +31,11 @@
 				<ul class="sidenav">
 					<li class="student"><a href="take-exam.html"><i class="ion-compose"></i> TAKE EXAM</a></li>
 					<li class="student"><a href="show-result.html"><i class="ion-printer"></i> SHOW RESULTS</a></li>
-					<li class="professor"><a href="add-exam.html"><i class="ion-android-add-circle"></i> ADD EXAM</a></li>
+					<li class="professor"><a href="add-questions.html"><i class="ion-help-circled"></i> ADD QUESTIONS</a></li>
+					<li class="professor"><a href="new-exam.html"><i class="ion-android-add-circle"></i> ADD EXAM</a></li>
 					<li class="professor"><a href="stats.html"><i class="ion-podium"></i> STATS</a></li>
 					<li class="empolyee"><a href="add-student.html"><i class="ion-android-person-add"></i> ADD STUDENT</a></li>
-					<li class="empolyee"><a href="add-course.html"><i class="ion-android-add-circle"></i> ADD COURSE</a>
+					<li class="empolyee"><a href="add-course.html"><i class="ion-android-add-circle"></i> ADD COURSE</a></li>
 				</ul>
 			</div>
 			<div class="col span-9-of-12 sectionContent">
