--- a/pages/add-course.html
+++ b/pages/add-course.html
@@ -30,7 +30,8 @@
 				<ul class="sidenav">
 					<li class="student"><a href="take-exam.html"><i class="ion-compose"></i> TAKE EXAM</a></li>
 					<li class="student"><a href="show-result.html"><i class="ion-printer"></i> SHOW RESULTS</a></li>
-					<li class="professor"><a href="add-exam.html"><i class="ion-android-add-circle"></i> ADD EXAM</a></li>
+					<li class="professor"><a href="add-questions.html"><i class="ion-help-circled"></i> ADD QUESTIONS</a></li>
+					<li class="professor"><a href="new-exam.html"><i class="ion-android-add-circle"></i> ADD EXAM</a></li>
 					<li class="professor"><a href="stats.html"><i class="ion-podium"></i> STATS</a></li>
 					<li class="empolyee"><a href="add-student.html"><i class="ion-android-person-add"></i> ADD STUDENT</a></li>
 					<li class="empolyee sideactive"><a href="add-course.html"><i class="ion-android-add-circle"></i> ADD COURSE</a></li>
@@ -39,7 +40,7 @@
 			<div class="col span-9-of-12 sectionContent">
 				<h2 class="text-center"><i class="ion-android-add-circle"></i> Add a New Course</h2>
 				<div id="courses-table">
-					<span>A list with courses you added</span>
+					<span class="form-label">A list with courses you added</span>
 					<!-- 
 						<thead><tr><th>ID</th> + <th>Course Name</th> + <th>Midterm</th> + <th>Final</th> + <th>Delete</th></tr></thead>
 					 -->
