--- a/pages/show-result.html
+++ b/pages/show-result.html
@@ -30,17 +30,44 @@
 				<ul class="sidenav">
 					<li class="student"><a href="take-exam.html"><i class="ion-compose"></i> TAKE EXAM</a></li>
 					<li class="student sideactive"><a href="show-result.html"><i class="ion-printer"></i> SHOW RESULTS</a></li>
-					<li class="professor"><a href="add-exam.html"><i class="ion-android-add-circle"></i> ADD EXAM</a></li>
+					<li class="professor"><a href="add-questions.html"><i class="ion-help-circled"></i> ADD QUESTIONS</a></li>
+					<li class="professor"><a href="new-exam.html"><i class="ion-android-add-circle"></i> ADD EXAM</a></li>
 					<li class="professor"><a href="stats.html"><i class="ion-podium"></i> STATS</a></li>
 					<li class="empolyee"><a href="add-student.html"><i class="ion-android-person-add"></i> ADD STUDENT</a></li>
-					<li class="empolyee"><a href="add-course.html"><i class="ion-android-add-circle"></i> ADD COURSE</a>
+					<li class="empolyee"><a href="add-course.html"><i class="ion-android-add-circle"></i> ADD COURSE</a></li>
 				</ul>
 			</div>
 			<div class="col span-9-of-12 sectionContent">
 				<h2 class="text-center"><i class="ion-printer"></i> Show Exams Results</h2>
+				<div id="show-result">
+					<span class="form-label">Select the course you want its result: </span>
+					<select class="input-field" name="courses">
+								<option value="circuits">Circuits</option>
+								<option value="steel">Steel</option>
+					</select>
+					<button class="btn-primary show-result">Display Result</button>
+				</div>
+				<div id="result-table">
+					<!-- 
+						<thead><tr><th>(i+1)</th> + <th>STUDENT NAME</th> + <th>GRADE</th></tr></thead>
+					 -->
+					{${resultTable}}
+
+				</div>
 			</div>
 		</div>
 	</section>
+	<script>
+		/* ---------- SHOW RESULTS PAGE ---------- */
+		var showStatsBtn = document.querySelector('.show-result');
+
+		showStatsBtn.addEventListener('click', function() {
+			'use strict';
+			document.querySelector('#result-table').style.display = "block";
+		});
+
+		/* ---------- SHOW RESULTS PAGE ---------- */
+	</script>
 </body>
 
 </html>
