--- a/pages/take-exam.html
+++ b/pages/take-exam.html
@@ -30,17 +30,99 @@
 				<ul class="sidenav">
 					<li class="student sideactive"><a href="take-exam.html"><i class="ion-compose"></i> TAKE EXAM</a></li>
 					<li class="student"><a href="show-result.html"><i class="ion-printer"></i> SHOW RESULTS</a></li>
-					<li class="professor"><a href="add-exam.html"><i class="ion-android-add-circle"></i> ADD EXAM</a></li>
+					<li class="professor"><a href="add-questions.html"><i class="ion-help-circled"></i> ADD QUESTIONS</a></li>
+					<li class="professor"><a href="new-exam.html"><i class="ion-android-add-circle"></i> ADD EXAM</a></li>
 					<li class="professor"><a href="stats.html"><i class="ion-podium"></i> STATS</a></li>
 					<li class="empolyee"><a href="add-student.html"><i class="ion-android-person-add"></i> ADD STUDENT</a></li>
-					<li class="empolyee"><a href="add-course.html"><i class="ion-android-add-circle"></i> ADD COURSE</a>
+					<li class="empolyee"><a href="add-course.html"><i class="ion-android-add-circle"></i> ADD COURSE</a></li>
 				</ul>
+				<div class="text-center">
+					<h2>Time Left</h2>
+					<h2 id="timer">00 : 00</h2>
+				</div>
 			</div>
 			<div class="col span-9-of-12 sectionContent">
 				<h2 class="text-center"><i class="ion-compose"></i> Take Exam</h2>
+				<form name="select-exam-form" id="select-exam-form">
+					<div id="select-exam">
+						<span class="form-label">Select the course you want to take exam in it:</span>
+						<select class="input-field" name="courses">
+								<option value="circuits">Circuits</option>
+								<option value="steel">Steel</option>
+					</select>
+						<button type="button" class="btn-primary start-exam">Start Exam</button>
+					</div>
+				</form>
+				<div id="exam">
+					<form id="questions-form">
+						<div id="question-details">
+							<h3 class="question">MCQ Question text is here?</h3>
+							<span class="form-label">The Answer: </span>
+							<select class="input-field ans-mcq" name="question-type">
+								<option>Answer 1</option>
+								<option>Answer 2</option>
+								<option>Answer 3</option>
+								<option>Answer 4</option>
+							</select>
+						</div>
+						<div id="question-details">
+							<h3 class="question">TOF Question text is here?</h3>
+							<span class="form-label">The Answer: </span>
+							<select class="input-field ans-tof">
+								<option>True</option>
+								<option>False</option>
+							</select>
+						</div>
+						<div id="question-details">
+							<h3 class="question">Complete Question text is here?</h3>
+							<span class="form-label">The Answer: </span>
+							<input class="input-field ans" name="q1rngans1" type="text" placeholder="Write Answer" />
+						</div>
+
+						<input class="btn-success" type="submit" value="Submit Answers" />
+					</form>
+				</div>
 			</div>
 		</div>
 	</section>
+	<script>
+		var startExamBtn = document.querySelector('.start-exam');
+
+		startExamBtn.addEventListener('click', function() {
+			document.querySelector('#exam').style.display = "block";
+			document.querySelector('#select-exam-form').style.display = "none";
+			document.getElementById('timer').innerHTML = 0 + " : " + 10;
+			startTimer();
+
+		});
+
+		function startTimer() {
+			var presentTime = document.getElementById('timer').innerHTML;
+			var timeArray = presentTime.split(/:/);
+			var m = timeArray[0];
+			var s = checkSecond((timeArray[1] - 1));
+			if (s == 59)
+				m = m - 1;
+
+			if (m < 0) {
+				return;
+				document.forms
+			}
+
+			document.getElementById('timer').innerHTML = m + " : " + s;
+			setTimeout(startTimer, 1000);
+		}
+
+		function checkSecond(sec) {
+			if (sec < 10 && sec >= 0) {
+				sec = "0" + sec
+			} // add zero in front of numbers < 10
+			if (sec < 0) {
+				sec = "59"
+			}
+			return sec;
+		}
+	</script>
 </body>
 
 </html>
