--- a/pages/add-questions.html
+++ b/pages/add-questions.html
@@ -112,7 +112,11 @@
 			if (validate()) {
 				document.querySelector('#questions').style.display = "block";
 			}
-		});
+        });
+        // var itm = document.getElementById('question-details'),
+        //     cln = itm.cloneNode(true);
+        // document.getElementById('questions-form').appendChild(cln);
+        
 	</script>
 </body>
 
