--- a/pages/settings.html
+++ b/pages/settings.html
@@ -16,7 +16,8 @@
 			<a href="#"><img class="logo" src="../resources/img/logo.png" alt="Question Logo" /></a>
 			<ul class="main-nav">
 
-				<li><a class="active" href="#"><i class="ion-android-options"></i> Settings</a></li>
+				<li><a class="" href="profile.html"><i class="ion-android-contact"></i> Profile</a></li>
+				<li><a class="active" href="settings.html"><i class="ion-android-options"></i> Settings</a></li>
 				<li><a class="" href="#"><i class="ion-power"></i> Sign Out</a></li>
 			</ul>
 		</div>
@@ -41,14 +42,6 @@
 			<div class="col span-9-of-12 sectionContent">
 				<h2 class="text-center"><i class="ion-android-options"></i> Settings</h2>
 				<form id="setting-form" name="setting-form">
-					<span class="form-label">Full Name</span>
-					<input class="input-field" type="text" value="Muhammad Magdy Muhammad Al-Gazouly" disabled/>
-					<span class="form-label">Email Address</span>
-					<input class="input-field" type="email" value="m.algazouly96@aswu.edu.eg" disabled/>
-					<span class="form-label">SSN</span>
-					<input class="input-field" type="text" value="29608012800913" disabled/>
-					<span class="form-label">Level/Title</span>
-					<input class="input-field" type="text" value="Third Year" disabled/>
 					<span class="form-label">Password</span>
 					<input class="input-field" type="password" placeholder="Old Password" required/>
 					<input class="input-field" type="password" placeholder="New Password" required/>
