--- a/pages/add-student.html
+++ b/pages/add-student.html
@@ -15,6 +15,7 @@
 		<div class="row">
 			<a href="#"><img class="logo" src="../resources/img/logo.png" alt="Question Logo" /></a>
 			<ul class="main-nav">
+				<li><a class="" href="profile.html"><i class="ion-android-contact"></i> Profile</a></li>
 				<li><a class="" href="settings.html"><i class="ion-android-options"></i> Settings</a></li>
 				<li><a class="" href="#"><i class="ion-power"></i> Sign Out</a></li>
 			</ul>
