--- a/pages/show-result.html
+++ b/pages/show-result.html
@@ -42,9 +42,8 @@
 				<div id="show-result">
 					<span class="form-label">Select the course you want its result: </span>
 					<select class="input-field" name="courses">
-								<option value="circuits">Circuits</option>
-								<option value="steel">Steel</option>
-					</select>
+                        {${coursesOptions}}
+                    </select>
 					<button class="btn-primary show-result">Display Result</button>
 				</div>
 				<div id="result-table">
