--- a/pages/stats.html
+++ b/pages/stats.html
@@ -42,9 +42,8 @@
 				<div id="show-stats">
 					<span class="form-label">Select the course you want its stats: </span>
 					<select class="input-field" name="courses">
-								<option value="circuits">Circuits</option>
-								<option value="steel">Steel</option>
-						</select>
+                        {${coursesOptions}}
+                    </select>
 					<button class="btn-primary show-stats">Show Stats</button>
 				</div>
 				<div id="stats-table">
